--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,35 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-  # State Management & Networking (Sudah Ada)
   get: ^4.6.6
-  http: ^1.2.1
   dio: ^5.4.3+1
-  path: ^1.9.0
   cupertino_icons: ^1.0.8
-
-  # DB Lokal (Sudah Ada)
-  sqflite: ^2.3.0
-  sqflite_common_ffi: ^2.3.0
-
-  # ===================================================
-  # 💡 DEPENDENSI WAJIB UNTUK EKSPERIMEN KETERSEDIAAN DATA
-  # ===================================================
-
-  # 1. Penyimpanan Sederhana (Shared Preferences)
   shared_preferences: ^2.2.2 
-
-  # 2. Penyimpanan Terstruktur Lokal (Hive)
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-
-  # 3. Penyimpanan Cloud (Supabase)
   supabase_flutter: ^2.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.0
+  hive_generator: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
